--- a/src/App.css
+++ b/src/App.css
@@ -143,7 +143,7 @@ p {
   padding: 0px;
   margin: 0px;
   color: #bbbbbb;
-  align-self: flex-start;
+  align-self: center;
 }
 .lin2 {
   background-color: #bbbbbb !important;
